add: new components

--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -5,6 +5,9 @@ import Icon_home from "../components/logo_icon/Icon_home.astro";
 import Search_icon from "../components/logo_icon/Search_icon.astro";
 import Library_icon from "../components/logo_icon/Library_icon.astro"; 
 
+
+import { playlist } from "../lib/dataPlayList";
+
 ---
 
 <nav class="flex flex-col flex-1 gap-2">
