--- a/src/components/SideMenuCards.astro
+++ b/src/components/SideMenuCards.astro
@@ -12,3 +12,17 @@ const { id, cover, title, artists, color, } = playList;
 const artistString = artists.join(","); 
 
 ---
+
+<a href={`/playlist/${id}`} class="playlist-item flex relative p-2 overflow-hidden items-center gap-5 rounded-md hover:bg-zinc-800  "  >
+
+  <picture class="h-12 w-12 flex-none">
+    <img class="object-cover bg-cover bg-no-repeat bg-center w-full h-full" src={cover} alt={`Cover ${title}} by ${artistString}`}>
+  </picture>
+
+  <div class="flex flex-auto flex-col truncate" >
+    <h4 class="text-white text-sm" >{title}</h4>
+
+    <span class="text-sm text-gray-400">{artistString}</span>
+  </div>
+
+</a>
